[package]
name = "nexusq2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["std", "fast-mod"]
fast-mod=[]
std=[]


[dependencies]
parking_lot = "0.12.1"


[dev-dependencies]
criterion = { version = "0.4"}
workerpool = "1.2"
pretty_assertions_sorted = "1.2"
rand = "0.8"

[target.'cfg(not(miri))'.dev-dependencies]
multiqueue2 = "0.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
opt-level = 1
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false


[[bench]]
name = "throughput"
harness = false

#[[bench]]
#name = "latency"
#harness = false