[package]
name = "nexusq2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backoff = ["crossbeam-utils"]

[dependencies]
event-listener = { git = "https://github.com/smol-rs/event-listener.git", features=["portable-atomic"]}
thiserror = "1.0"
portable-atomic = "1"
futures = "0.3"
parking_lot = "0.12"
crossbeam-utils = {version = "0.8", optional = true}

[dev-dependencies]
criterion = { version = "0.4", features=["async_tokio"]}
workerpool = "1.2"
pretty_assertions_sorted = "1.2"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(miri))'.dev-dependencies]
multiqueue2 = "0.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

#[profile.dev]
#opt-level = 1
#debug = true
#debug-assertions = false
#overflow-checks = false
#lto = false
#panic = 'unwind'
#incremental = true
#codegen-units = 16
#rpath = false


[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "throughput_async"
harness = false


#[[bench]]
#name = "latency"
#harness = false
