[package]
name = "nexusq2"
version = "0.1.0"
edition = "2021"
repository = "github.com/Lochlanna/nexusq2"
homepage = "github.com/Lochlanna/nexusq2"
description = "A fast, lock-free, multi-producer, multi-consumer, bounded queue"
keywords = ["lock-free", "mpmc", "channel", "async", "queue"]
license = "MIT"
readme = "README.md"
authors = ["Lochlann Andrews <lochlanna@gmail.com>"]
categories = ["concurrency", "asynchronous", "data-structures", "algorithms"]
documentation = "https://docs.rs/nexusq2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backoff = ["crossbeam-utils"]

[dependencies]
# provides blocking wait and async wake functionality
event-listener = { git = "https://github.com/Lochlanna/event-listener.git", features=["portable-atomic"]}
# Easy errors
thiserror = "1.0.39"
# Provides atomics on more systems which will help with compatibility
portable-atomic = "1.0.1"
# provides sink and stream traits
futures-util = { version = "0.3.27", default-features = false, features = ["sink"] }
# provides backoff wait strategy
crossbeam-utils = {version = "0.8.15", optional = true, default-features = false}

[dev-dependencies]
criterion = { version = "0.4.0", features=["async_tokio"]}
workerpool = "1.2.0"
pretty_assertions_sorted = "1.2.1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
# Redefine here as we need more features in the tests that aren't needed in the library itself
futures-util = { version = "0.3.27" }

[target.'cfg(not(miri))'.dev-dependencies]
multiqueue2 = "0.1.7"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
opt-level = 1
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false


[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "throughput_async"
harness = false

#
#[[bench]]
#name = "latency"
#harness = false
